chore(documentation): add maven site info report