@@ -34,4 +34,152 @@
 
 	</dependencies>
 
+	<reporting>
+		<plugins>
+			<!-- Génération de la javadoc -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.12.0</version>
+				<reportSets>
+					<reportSet>
+						<id>aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>aggregate</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+				<configuration>
+					<minmemory>128m</minmemory>
+					<maxmemory>512m</maxmemory>
+					<source>21</source>
+					<!-- doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
+					<docletArtifact>
+						<groupId>org.umlgraph</groupId>
+						<artifactId>umlgraph</artifactId>
+						<version>5.6.6</version>
+					</docletArtifact -->
+					<additionalparam>
+						-inferrel -inferdep -quiet -hide java.*
+						-collpackages java.util.* -qualify
+						-postfixpackage -nodefontsize 9
+						-nodefontpackagesize 7 -attributes -operations
+						-enumerations
+						-enumconstants -visibility -link
+						"http://docs.oracle.com/javase/7/docs/api/"
+					</additionalparam>
+					<show>private</show>
+				</configuration>
+			</plugin>
+			<!-- Vérification de la qualité du code avec CheckStyle -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>3.6.0</version>
+				<reportSets>
+					<reportSet>
+						<id>checkstyle-aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>checkstyle-aggregate</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<!-- Vérification de la qualité du code avec PMD -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.28.0</version>
+				<configuration>
+					<!-- rulesets>
+						<ruleset>/rulesets/basic.xml</ruleset>
+						<ruleset>/rulesets/braces.xml</ruleset>
+						<ruleset>/rulesets/codesize.xml</ruleset>
+						<ruleset>/rulesets/coupling.xml</ruleset>
+						<ruleset>/rulesets/design.xml</ruleset>
+						<ruleset>/rulesets/imports.xml</ruleset>
+						<ruleset>/rulesets/j2ee.xml</ruleset>
+						<ruleset>/rulesets/naming.xml</ruleset>
+						<ruleset>/rulesets/optimizations.xml</ruleset>
+						<ruleset>/rulesets/strictexception.xml</ruleset>
+						<ruleset>/rulesets/strings.xml</ruleset>
+						<ruleset>/rulesets/unusedcode.xml</ruleset>
+					</rulesets -->
+					<compilerVersion>21</compilerVersion>
+					<targetJdk>21</targetJdk>
+				</configuration>
+			</plugin>
+			<!-- Activité des développeurs sur le projet -->
+			<!--plugin>
+				        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-changelog-plugin</artifactId>
+        <version>3.0.0-M1</version>
+			</!plugin-->
+			<!-- Rapport croisé des sources du projet -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>3.6.0</version>
+				<reportSets>
+					<reportSet>
+						<id>aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>aggregate</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<!-- Analyse JDepend -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jdepend-maven-plugin</artifactId>
+				<version>2.0</version>
+			</plugin>
+			<!-- Couverture des tests -->
+			<!-- plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+			</plugin -->
+			<!-- Rapport de tests JUnit -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.5.5</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
+					<outputDirectory>
+						${basedir}/target/site
+					</outputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>net.objectlab</groupId>
+				<artifactId>mvn-qalab-plugin</artifactId>
+				<version>2.2</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report-merge-chart</report>
+							<report>report-movers-all</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<!-- <plugin> <groupId>com.wakaleo.schemaspy</groupId> <artifactId>maven-schemaspy-plugin</artifactId> 
+				<version>1.1-SNAPSHOT</version> <configuration> <databaseType>orathin</databaseType> 
+				<database>BA2AID01</database> <host>ldbv3.cnasea.fr</host> <port>1521</port> 
+				<jdbcUrl>jdbc:oracle:thin:@ldbv3.cnasea.fr:1521:BA2AID01</jdbcUrl> <user>${schemaspy.username}</user> 
+				<password>${schemaspy.password}</password> </configuration> </plugin> -->
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+    <artifactId>spotbugs-maven-plugin</artifactId>
+    <version>4.9.8.2</version>
+			</plugin>
+
+		</plugins>
+	</reporting>
 </project>
